[locationinfo] Update translations

--- a/modules-available/locationinfo/templates/page-config-panel-summary.html
+++ b/modules-available/locationinfo/templates/page-config-panel-summary.html
@@ -124,7 +124,7 @@
 											 max="86400" value="{{panelupdate}}" required>
 								</div>
 								<div class="col-sm-2">
-									<p class="btn btn-static helptext" title="{{lang_panelupdateTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_summaryUpdateIntervalTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
 									</p>
 								</div>
