--- a/modules-available/locationinfo/templates/page-server-log.html
+++ b/modules-available/locationinfo/templates/page-server-log.html
@@ -4,7 +4,7 @@
 <table class="table table-striped table-condensed">
 	<thead>
 	<th class="text-center slx-smallcol">{{lang_when}}</th>
-	<th class="text-center">{{lang_event}}</th>
+	<th class="text-center">{{lang_message}}</th>
 	</thead>
 	<tbody>
 	{{#list}}
