--- a/modules-available/dozmod/templates/networkshares-edit.html
+++ b/modules-available/dozmod/templates/networkshares-edit.html
@@ -20,8 +20,9 @@
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="target">{{lang_target}}</label>
-				<select class="form-control" name="target" id="target">
+				<select class="form-control" name="target" id="target" required>
 					<option value="-">{{lang_none}}</option>
+					<option value="PRINTER">{{lang_printer}}</option>
 					<option value="D">D:</option><option value="E">E:</option><option value="F">F:</option>
 					<option value="G">G:</option><option value="H">H:</option><option value="I">I:</option>
 					<option value="J">J:</option><option value="K">K:</option><option value="L">L:</option>
@@ -30,7 +31,6 @@
 					<option value="S">S:</option><option value="T">T:</option><option value="U">U:</option>
 					<option value="V">V:</option><option value="W">W:</option><option value="X">X:</option>
 					<option value="Y">Y:</option><option value="Z">Z:</option>
-					<option value="PRINTER">{{lang_printer}}</option>
 				</select>
 			</div>
 			<div class="input-group">
