--- a/modules-available/serversetup-bwlp-ipxe/templates/download.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/download.html
@@ -13,41 +13,32 @@
 				</tr>
 			{{/files}}
 		</table>
-		<p>
-			<span class="btn btn-default" data-toggle="modal" data-target="#help-usbimg">
-				<span class="glyphicon glyphicon-question-sign"></span>
-				{{lang_usbImgHelpBtn}}
-			</span>
-		</p>
+		<br>
 		<p>
 			{{lang_additionalInfoLink}} <a href="https://ipxe.org/appnote/buildtargets" target="_blank">{{lang_ipxeWikiUrl}}</a>
 		</p>
 	</div>
 </div>
 
-<div class="modal fade" id="help-usbimg" tabindex="-1" role="dialog">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				{{lang_usbImage}}
-			</div>
-			<div class="modal-body">
-				<p>{{lang_usbImgHelp}}</p>
-				<p>
-					<b>Linux</b>
-					<br>
-					{{lang_usbImgHelpLinux}}
-				</p>
-				<p>
-					<b>Windows</b>
-					<br>
-					{{lang_usbImgHelpWindows}}
-				</p>
-				<p>
-					<a href="https://rufus.akeo.ie/#download" target="_blank">{{lang_downloadRufus}}</a>
-				</p>
-			</div>
-		</div>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<span class="glyphicon glyphicon-question-sign"></span>
+		{{lang_createUsbImage}}
+	</div>
+	<div class="panel-body">
+		<p>{{lang_usbImgHelp}}</p>
+		<p>
+			<b>Linux</b>
+			<br>
+			{{lang_usbImgHelpLinux}}
+		</p>
+		<p>
+			<b>Windows</b>
+			<br>
+			{{lang_usbImgHelpWindows}}
+		</p>
+		<p>
+			<a href="https://rufus.akeo.ie/#download" target="_blank">{{lang_downloadRufus}}</a>
+		</p>
 	</div>
 </div>
