[serversetup-bwlp-ipxe] Add clearfix to bootentry list

--- a/modules-available/serversetup-bwlp-ipxe/templates/bootentry-list.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/bootentry-list.html
@@ -53,6 +53,8 @@
 	{{/allowEdit}}
 </div>
 
+<div class="clearfix"></div>
+
 <!-- Modals -->
 <form method="post" action="?do=serversetup">
 	<input type="hidden" name="token" value="{{token}}">
