--- a/modules-available/serversetup-bwlp-ipxe/templates/menu-list.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/menu-list.html
@@ -47,11 +47,11 @@
 				{{/allowEdit}}
 			</td>
 			<td align="center">
-				{{#allowDelete}}
+				{{#allowEdit}}
 					<button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#deleteModal" onclick="deleteMenu('{{menuid}}')">
 						<span class="glyphicon glyphicon-trash"></span>
 					</button>
-				{{/allowDelete}}
+				{{/allowEdit}}
 			</td>
 		</tr>
 	{{/menuTable}}
