[serversetup-bwlp-ipxe/locations] Minor fixes

--- a/modules-available/locations/templates/locations.html
+++ b/modules-available/locations/templates/locations.html
@@ -43,7 +43,7 @@
 		</tr>
 		{{#list}}
 			<tr>
-				<td>
+				<td class="text-nowrap">
 					<div style="display:inline-block;width:{{depth}}em"></div>
 					{{#show-only}}
 						<span>{{locationname}}</span>
