[dnbd3] Mark proxy connections in client list

--- a/modules-available/dnbd3/templates/page-proxy-clients.html
+++ b/modules-available/dnbd3/templates/page-proxy-clients.html
@@ -40,6 +40,9 @@
 				{{#clients}}
 					<tr>
 						<td>
+							{{#isServer}}
+								<span class="glyphicon glyphicon-hdd" title="{{lang_isProxy}}"></span>
+							{{/isServer}}
 							{{address}}
 						</td>
 						<td data-sort="int" data-sort-value="{{bytesSent}}" class="text-right">
