--- a/modules-available/serversetup-bwlp-ipxe/templates/bootentry-list.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/bootentry-list.html
@@ -7,6 +7,7 @@
 <table class="table">
 	<thead>
 	<tr>
+		<th>{{lang_entryId}}</th>
 		<th>{{lang_bootentryTitle}}</th>
 		<th>{{lang_hotkey}}</th>
 		<th class="slx-smallcol">{{lang_refCount}}</th>
@@ -17,6 +18,9 @@
 	<tbody>
 	{{#bootentryTable}}
 	<tr>
+		<td>
+			{{entryid}}
+		</td>
 		<td>
 			{{title}}
 		</td>
