--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -16,7 +16,7 @@
 				{{lang_machineSummary}}
 			</div>
 			<div class="panel-body">
-				<table class="table table-condensed">
+				<table class="table table-condensed" style="margin-bottom:-5px">
 					<tr>
 						<td class="text-nowrap">{{lang_uuid}}</td>
 						<td>{{machineuuid}}</td>
@@ -88,6 +88,19 @@
 							</td>
 						</tr>
 					{{/modeid}}
+					{{#hasroomplan}}
+						<tr>
+							<td class="text-nowrap">
+								{{lang_roomplan}}
+							</td>
+							<td class="text-center">
+								<a href="?do=roomplanner&amp;locationid={{locationid}}" target="_blank"
+									onclick="window.open(this.href, '_blank', 'toolbar=0,scrollbars,resizable');return false">
+									<img src="api.php?do=roomplanner&amp;show=svg&amp;locationid={{locationid}}&amp;machineuuid={{machineuuid}}"/>
+								</a>
+							</td>
+						</tr>
+					{{/hasroomplan}}
 				</table>
 			</div>
 		</div>
