--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -133,8 +133,8 @@
 							<div>{{lang_biosVersion}}</div>
 							<div>{{lang_biosDate}}</div>
 						</td>
-						<td>
-							<div id="bios-panel" class="pull-right">{{{bioshtml}}}</div>
+						<td class="text-nowrap">
+							<div id="bios-panel" class="pull-right"style="max-width:30%">{{{bioshtml}}}</div>
 							<div>{{biosversion}} (<b>{{biosrevision}}</b>)</div>
 							<div>{{biosdate}}</div>
 						</td>
