--- a/modules-available/statistics/templates/machine-bios-update.html
+++ b/modules-available/statistics/templates/machine-bios-update.html
@@ -1,3 +1,7 @@
+{{#error}}
+	<div class="warn" style="white-space: normal"><b>{{lang_biosUpdate}}</b>: {{error}}</div>
+{{/error}}
+{{^error}}
 <div><span class="btn btn-{{class}} btn-sm" data-toggle="modal" data-target="#bios-modal">
 	{{lang_biosUpdate}} &raquo;
 </span></div>
@@ -24,3 +28,4 @@
 		</div>
 	</div>
 </div>
+{{/error}}
