--- a/modules-available/serversetup-bwlp-ipxe/templates/ipxe-new-boot-entry.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/ipxe-new-boot-entry.html
@@ -1,4 +1,9 @@
+{{^oldentryid}}
 <h2>{{lang_newBootEntryHead}}</h2>
+{{/oldentryid}}
+{{#oldentryid}}
+	<h2>{{lang_editBootEntryHead}}</h2>
+{{/oldentryid}}
 
 {{#builtin}}
 	<div class="alert alert-warning">
@@ -18,11 +23,11 @@
 
 			<div class="form-group">
 				<div class="radio">
-					<input class="type-radio" type="radio" name="type" value="exec" id="type-exec" {{exec_checked}}>
+					<input class="type-radio" type="radio" name="type" value="exec" id="type-exec" {{exec_checked}} {{disabled}}>
 					<label for="type-exec">{{lang_typeExecEntry}}</label>
 				</div>
 				<div class="radio">
-					<input class="type-radio" type="radio" name="type" value="script" id="type-script" {{script_checked}}>
+					<input class="type-radio" type="radio" name="type" value="script" id="type-script" {{script_checked}} {{disabled}}>
 					<label for="type-script">{{lang_typeScriptEntry}}</label>
 				</div>
 			</div>
@@ -31,13 +36,14 @@
 				<label for="input-id">
 					{{lang_entryId}} {{lang_idFormatHint}}
 				</label>
-				<input id="input-id" class="form-control" name="newid" value="{{entryid}}" pattern="^[a-z0-9\-_]{1,16}$" minlength="1" maxlength="16" required>
+				<input id="input-id" class="form-control" name="newid" value="{{entryid}}" pattern="^[a-z0-9\-_]{1,16}$"
+						 minlength="1" maxlength="16" required {{#builtin}}readonly{{/builtin}} {{disabled}}>
 			</div>
 			<div class="form-group">
 				<label for="input-title">
 					{{lang_entryTitle}}
 				</label>
-				<input id="input-title" class="form-control" name="title" value="{{title}}" maxlength="100">
+				<input id="input-title" class="form-control" name="title" value="{{title}}" maxlength="100" {{disabled}}>
 			</div>
 
 			<div class="type-form" id="form-exec">
@@ -45,7 +51,7 @@
 					<label for="arch-selector">
 						{{lang_archSelector}}
 					</label>
-					<select id="arch-selector" class="form-control" name="entry[arch]">
+					<select id="arch-selector" class="form-control" name="entry[arch]" {{disabled}}>
 						<option value="agnostic" {{agnostic_selected}}>{{lang_archAgnostic}}</option>
 						<option value="PCBIOS" {{PCBIOS_selected}}>{{lang_biosOnly}}</option>
 						<option value="EFI" {{EFI_selected}}>{{lang_efiOnly}}</option>
@@ -62,39 +68,39 @@
 										<label for="input-ex">
 											{{lang_imageToLoad}}
 										</label>
-										<input id="input-ex" class="form-control" name="entry[executable][{{mode}}]" value="{{executable}}">
+										<input id="input-ex" class="form-control" name="entry[executable][{{mode}}]" value="{{executable}}" {{disabled}}>
 									</div>
 									<div class="form-group">
 										<label for="input-rd">
 											{{lang_initRd}}
 										</label>
-										<input id="input-rd" class="form-control" name="entry[initRd][{{mode}}]" value="{{initRd}}">
+										<input id="input-rd" class="form-control" name="entry[initRd][{{mode}}]" value="{{initRd}}" {{disabled}}>
 									</div>
 									<div class="form-group">
 										<label for="input-cmd">
 											{{lang_commandLine}}
 										</label>
 										<input id="input-cmd" class="form-control" name="entry[commandLine][{{mode}}]"
-												 value="{{commandLine}}">
+												 value="{{commandLine}}" {{disabled}}>
 									</div>
 									<div class="form-group">
 										<div class="checkbox checkbox-inline">
 											<input id="exec-replace-{{mode}}" class="form-control" type="checkbox"
-													 name="entry[replace][{{mode}}]" {{replace_checked}}>
+													 name="entry[replace][{{mode}}]" {{replace_checked}} {{disabled}}>
 											<label for="exec-replace-{{mode}}">{{lang_execReplace}}</label>
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="checkbox checkbox-inline">
 											<input id="exec-au-{{mode}}" class="form-control" type="checkbox"
-													 name="entry[autoUnload][{{mode}}]" {{autoUnload_checked}}>
+													 name="entry[autoUnload][{{mode}}]" {{autoUnload_checked}} {{disabled}}>
 											<label for="exec-au-{{mode}}">{{lang_execAutoUnload}}</label>
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="checkbox checkbox-inline">
 											<input id="exec-reset-{{mode}}" class="form-control" type="checkbox"
-													 name="entry[resetConsole][{{mode}}]" {{resetConsole_checked}}>
+													 name="entry[resetConsole][{{mode}}]" {{resetConsole_checked}} {{disabled}}>
 											<label for="exec-reset-{{mode}}">{{lang_execResetConsole}}</label>
 										</div>
 									</div>
@@ -111,7 +117,7 @@
 						{{lang_scriptContent}}
 					</label>
 					<textarea id="script-ta" class="form-control" rows="10"
-								 name="entry[script]">{{entry.script}}</textarea>
+								 name="entry[script]" {{disabled}}>{{entry.script}}</textarea>
 				</div>
 			</div>
 
@@ -129,7 +135,7 @@
 			</ul>
 
 			<div class="buttonbar text-right">
-				<button type="submit" class="btn btn-primary">
+				<button type="submit" class="btn btn-primary" {{disabled}}>
 					<span class="glyphicon glyphicon-floppy-disk"></span>
 					{{lang_save}}
 				</button>
