--- a/modules-available/sysconfig/templates/list-configs.html
+++ b/modules-available/sysconfig/templates/list-configs.html
@@ -21,7 +21,7 @@
 				<table id="conftable" class="slx-table table-hover" style="width:100%">
 					{{#configs}}
 					<tr>
-						<td data-id="{{configid}}" data-modlist="{{modlist}}" class="confrow slx-pointer" width="100%">
+						<td data-id="{{configid}}" data-modlist="{{modlist}}" class="confrow slx-pointer" width="100%" title="{{dateline_s}}">
 							<table class="slx-ellipsis"><tr><td>{{config}}</td></tr></table>
 						</td>
 						<td>
